# Nav

./: .gitattributes  .gitignore  FILE_MANIFEST.txt  README.md  README_FIRST.txt  SHA256SUMS  VERSION.txt
configs/cartographer/: s2_2d.lua
configs/navigation/: s2_nav2_params.yaml
docs/: S2_DREAM激光雷达建图迁移与测试手册_20260716.md  S2有线建图与Nav2导航完整操作手册_20260717.md
robot_description/: CMakeLists.txt  S2_3DURDF_gazebo_clean.urdf  package.xml
robot_description/config/: joint_names_S2_3DURDF.yaml
robot_description/meshes/: C1_Link.STL  C2_Link.STL  C3_Link.STL  C4_Link.STL  C5_Link.STL  C6_Link.STL  C7_Link.STL  C8_Link.STL  IMU_Link.STL  XJ_Link.STL  YD_link.STL  YHL_Link.STL  YLD_Link.STL  YQL_Link.STL  YQ_Link.STL  ZHL_Link.STL  ZH_Link.STL  ZLD_Link.STL  ZQL_Link.STL
robot_description/urdf/: S2_3DURDF.csv  S2_3DURDF.urdf
setup/: install_and_build.sh  s2_bundle_env.sh
tests/: smoke_test.py  test_dynamic_obstacle_layer.py  test_frontier_explorer.py
tools/: build_s2_nav2_source.sh  g1_occupancy_grid_exporter.py  s2_cartographer_save_service.py  s2_emergency_stop.py  s2_filter_occupancy_map.py  s2_frontier_explorer.py  s2_goal_pose_bridge.py  s2_keyboard_mapping_bridge.sh  s2_keyboard_mapping_control.py  s2_lidar_mapping.sh  s2_lidar_rviz.sh  s2_lidar_rviz_bridge.py  s2_lidar_topic_diagnostics.py  s2_mapping_rviz.sh  s2_merge_occupancy_maps.py  s2_nav2_cmd_vel_bridge.py  s2_nav2_navigation.launch.py  s2_nav2_navigation.sh  s2_nav2_source_env.sh  s2_registered_cloud_mapper.py  s2_robot_model.launch.py  s2_robot_model.py  s2_safety_cloud_relay.py  s2_ultrasonic_relay.py
(+6 files in other folders)
