<?xml version="1.0"?>
<package format="3">
  <name>S2_3DURDF</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for S2_3DURDF robot.
    Contains configuration data, 3D models and launch files.
  </description>
  <maintainer email="user@example.com">user</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
